Home page and general text updates.

--- a/index.html
+++ b/index.html
@@ -40,43 +40,40 @@
     <main class="main">
 
       <h2>How to use this site!</h2>
-      <!-- ///////////////////////////////////////////////////// -->
+      <!-- ////////////////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>This is a code test Example</h3>
-
+        <h3>Choose a JavaScript Topic!</h3>
+        <div class="imageExampleCont">
+          <img src="./images/nav-image.png" />
+        </div>
+      </div>
+      <!-- /////////////////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Scroll down to view the sub-topics!</h3>
+        <div class="imageExampleCont">
+          <img src="./images/section-image.png" />
+        </div>
+      </div>
+      <!-- ////////////////////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>Review the code examples!</h3>
         <div class="codeExampleCont">
           <!-- The example code. -->
           <div id="codeTestID_1"></div>
         </div>
         <!-- Displays the code outcome. -->
+        <h3 class="marginB">Click the button to reveal the outcome of the code!</h3>
         <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
+          <h3 class="marginB">Click the button again to hide the outcome!</h3>
           <div class="codeOutcomeCont">
             <!-- The result. -->
             <div id="ocTest_1"></div>
           </div>
         </div>
       </div>
-      <!-- ///////////////////////////////////////////////////// -->
-      <div class="jsTopicCont">
-        <h3>This is another code test Example</h3>
-
-        <div class="codeExampleCont">
-          <!-- The example code. -->
-          <div id="codeTestID_2"></div>
-        </div>
-        <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Outcome</button>
-
-        <div class="hide">
-          <div class="codeOutcomeCont">
-            <!-- The result. -->
-            <div id="ocTest_2"></div>
-          </div>
-        </div>
-      </div>
-      <!-- ///////////////////////////////////////////////////// -->
+      
     </main>
 
 
