--- a/pages/02_arithmeticOperators.html
+++ b/pages/02_arithmeticOperators.html
@@ -42,7 +42,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: + (Plus)</h3>
+        <h3>Arithmetic Operators: + (Plus) V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -61,7 +61,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: + (Plus)</h3>
+        <h3>Arithmetic Operators: + (Plus) V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -80,7 +80,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: + (Plus)</h3>
+        <h3>Arithmetic Operators: + (Plus) V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -99,7 +99,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: - (Minus)</h3>
+        <h3>Arithmetic Operators: - (Minus) V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -118,7 +118,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: - (Minus)</h3>
+        <h3>Arithmetic Operators: - (Minus) V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -137,7 +137,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: - (Minus)</h3>
+        <h3>Arithmetic Operators: - (Minus) V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -194,7 +194,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: % (Remainder / Modulo)</h3>
+        <h3>Arithmetic Operators: % (Remainder / Modulo) V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -212,7 +212,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: % (Remainder / Modulo)</h3>
+        <h3>Arithmetic Operators: % (Remainder / Modulo) V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -230,7 +230,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: ** (Exponential)</h3>
+        <h3>Arithmetic Operators: ** (Exponential) V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -248,7 +248,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: ** (Exponential)</h3>
+        <h3>Arithmetic Operators: ** (Exponential) V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -266,7 +266,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: ++ (Increment)</h3>
+        <h3>Arithmetic Operators: ++ (Increment) V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -284,7 +284,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: ++ (Increment)</h3>
+        <h3>Arithmetic Operators: ++ (Increment) V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -302,7 +302,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: -- (Decrement)</h3>
+        <h3>Arithmetic Operators: -- (Decrement) V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -320,7 +320,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arithmetic Operators: -- (Decrement)</h3>
+        <h3>Arithmetic Operators: -- (Decrement) V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
