--- a/pages/03_comparisonOperators.html
+++ b/pages/03_comparisonOperators.html
@@ -96,7 +96,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Comparison Operators: !=</h3>
+        <h3>Comparison Operators: != V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -114,7 +114,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Comparison Operators: !=</h3>
+        <h3>Comparison Operators: != V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -132,7 +132,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Comparison Operators: !=</h3>
+        <h3>Comparison Operators: != V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
