--- a/pages/04_if_etc.html
+++ b/pages/04_if_etc.html
@@ -42,7 +42,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"if" Statements etc.: if</h3>
+        <h3>"if" Statements etc.: if V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -60,7 +60,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"if" Statements etc.: if</h3>
+        <h3>"if" Statements etc.: if V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -150,7 +150,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"if" Statements etc.: Ternary Operator</h3>
+        <h3>"if" Statements etc.: Ternary Operator V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -168,7 +168,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"if" Statements etc.: Ternary Operator</h3>
+        <h3>"if" Statements etc.: Ternary Operator V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -186,7 +186,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"if" Statements etc.: Ternary Operator</h3>
+        <h3>"if" Statements etc.: Ternary Operator V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -204,7 +204,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"if" Statements etc.: Switch</h3>
+        <h3>"if" Statements etc.: Switch V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -222,7 +222,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"if" Statements etc.: Switch</h3>
+        <h3>"if" Statements etc.: Switch V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -240,7 +240,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"if" Statements etc.: Switch</h3>
+        <h3>"if" Statements etc.: Switch V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
