--- a/pages/05_for_etc.html
+++ b/pages/05_for_etc.html
@@ -42,7 +42,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"for" Statements etc.: for </h3>
+        <h3>"for" Statements etc.: for V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -60,7 +60,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"for" Statements etc.: for </h3>
+        <h3>"for" Statements etc.: for V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -78,7 +78,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"for" Statements etc.: for </h3>
+        <h3>"for" Statements etc.: for V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -132,7 +132,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"for" Statements etc.: while </h3>
+        <h3>"for" Statements etc.: while V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -150,7 +150,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"for" Statements etc.: while </h3>
+        <h3>"for" Statements etc.: while V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
