--- a/pages/06_strings.html
+++ b/pages/06_strings.html
@@ -42,7 +42,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: length</h3>
+        <h3>Strings: length V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -60,7 +60,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: length</h3>
+        <h3>Strings: length V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -78,7 +78,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: length</h3>
+        <h3>Strings: length V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -96,7 +96,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: indexOf()</h3>
+        <h3>Strings: indexOf() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -114,7 +114,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: indexOf()</h3>
+        <h3>Strings: indexOf() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -132,7 +132,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: slice()</h3>
+        <h3>Strings: slice() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -150,7 +150,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: slice()</h3>
+        <h3>Strings: slice() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -168,7 +168,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: slice()</h3>
+        <h3>Strings: slice() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -186,7 +186,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: slice()</h3>
+        <h3>Strings: slice() V4</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -204,7 +204,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: slice()</h3>
+        <h3>Strings: slice() V5</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -222,7 +222,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Strings: slice()</h3>
+        <h3>Strings: slice() V6</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
