--- a/pages/07_numbers.html
+++ b/pages/07_numbers.html
@@ -42,7 +42,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Exponents</h3>
+        <h3>Numbers: Exponents V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -60,7 +60,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Exponents</h3>
+        <h3>Numbers: Exponents V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -78,7 +78,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: parseInt()</h3>
+        <h3>Numbers: parseInt() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -97,7 +97,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: parseInt()</h3>
+        <h3>Numbers: parseInt() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -116,7 +116,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: parseInt()</h3>
+        <h3>Numbers: parseInt() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -154,7 +154,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Number()</h3>
+        <h3>Numbers: Number() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -173,7 +173,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Number()</h3>
+        <h3>Numbers: Number() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -192,7 +192,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Number()</h3>
+        <h3>Numbers: Number() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -211,7 +211,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: The + Operator</h3>
+        <h3>Numbers: The + Operator V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -230,7 +230,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: The + Operator</h3>
+        <h3>Numbers: The + Operator V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -268,7 +268,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.max()</h3>
+        <h3>Numbers: Math.max() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -286,7 +286,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.max()</h3>
+        <h3>Numbers: Math.max() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -304,7 +304,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.max()</h3>
+        <h3>Numbers: Math.max() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -376,7 +376,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.round()</h3>
+        <h3>Numbers: Math.round() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -394,7 +394,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.round()</h3>
+        <h3>Numbers: Math.round() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -412,7 +412,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.ceil()</h3>
+        <h3>Numbers: Math.ceil() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -430,7 +430,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.ceil()</h3>
+        <h3>Numbers: Math.ceil() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -448,7 +448,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.floor()</h3>
+        <h3>Numbers: Math.floor() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -466,7 +466,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.floor()</h3>
+        <h3>Numbers: Math.floor() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -484,7 +484,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.trunc()</h3>
+        <h3>Numbers: Math.trunc() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -502,7 +502,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.trunc()</h3>
+        <h3>Numbers: Math.trunc() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -520,7 +520,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.random()</h3>
+        <h3>Numbers: Math.random() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -539,7 +539,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.random()</h3>
+        <h3>Numbers: Math.random() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -558,7 +558,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Numbers: Math.random()</h3>
+        <h3>Numbers: Math.random() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
