--- a/pages/08_dates.html
+++ b/pages/08_dates.html
@@ -262,7 +262,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Dates: setFullYear()</h3>
+        <h3>Dates: setFullYear() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -280,7 +280,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Dates: setFullYear()</h3>
+        <h3>Dates: setFullYear() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -298,7 +298,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Dates: setFullYear()</h3>
+        <h3>Dates: setFullYear() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -316,7 +316,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Dates: setMonth()</h3>
+        <h3>Dates: setMonth() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -334,7 +334,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Dates: setMonth()</h3>
+        <h3>Dates: setMonth() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -352,7 +352,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Dates: setTime()</h3>
+        <h3>Dates: setTime() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -370,7 +370,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Dates: setTime()</h3>
+        <h3>Dates: setTime() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
