--- a/pages/09_arrays.html
+++ b/pages/09_arrays.html
@@ -42,7 +42,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: The Index Value</h3>
+        <h3>Arrays: The Index Value V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -60,7 +60,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: The Index Value</h3>
+        <h3>Arrays: The Index Value V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -78,7 +78,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: The Index Value</h3>
+        <h3>Arrays: The Index Value V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -96,7 +96,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: The Index Value</h3>
+        <h3>Arrays: The Index Value V4</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -114,7 +114,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: The Index Value</h3>
+        <h3>Arrays: The Index Value V5</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -241,7 +241,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: join()</h3>
+        <h3>Arrays: join() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -260,7 +260,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: join()</h3>
+        <h3>Arrays: join() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -279,7 +279,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: join()</h3>
+        <h3>Arrays: join() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -316,7 +316,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: slice()</h3>
+        <h3>Arrays: slice() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -334,7 +334,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: slice()</h3>
+        <h3>Arrays: slice() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -352,7 +352,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: splice()</h3>
+        <h3>Arrays: splice() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -370,7 +370,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: splice()</h3>
+        <h3>Arrays: splice() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -388,7 +388,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: splice()</h3>
+        <h3>Arrays: splice() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -424,7 +424,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: includes()</h3>
+        <h3>Arrays: includes() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -442,7 +442,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: includes()</h3>
+        <h3>Arrays: includes() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -478,7 +478,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: sort()</h3>
+        <h3>Arrays: sort() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -496,7 +496,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: sort()</h3>
+        <h3>Arrays: sort() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -514,7 +514,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: sort()</h3>
+        <h3>Arrays: sort() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -532,7 +532,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: sort()</h3>
+        <h3>Arrays: sort() V4</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -568,7 +568,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: map()</h3>
+        <h3>Arrays: map() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -586,7 +586,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: map()</h3>
+        <h3>Arrays: map() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -622,7 +622,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: reduce()</h3>
+        <h3>Arrays: reduce() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -641,7 +641,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: reduce()</h3>
+        <h3>Arrays: reduce() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -660,7 +660,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: reduce()</h3>
+        <h3>Arrays: reduce() V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -679,7 +679,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: reduce()</h3>
+        <h3>Arrays: reduce() V4</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -698,7 +698,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: findIndex()</h3>
+        <h3>Arrays: findIndex() V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -716,7 +716,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Arrays: findIndex()</h3>
+        <h3>Arrays: findIndex() V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
