--- a/pages/10_objects.html
+++ b/pages/10_objects.html
@@ -42,7 +42,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Objects: Accessing Properties</h3>
+        <h3>Objects: Accessing Properties V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -60,7 +60,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Objects: Accessing Properties</h3>
+        <h3>Objects: Accessing Properties V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -78,7 +78,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Objects: Accessing Properties</h3>
+        <h3>Objects: Accessing Properties V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -96,7 +96,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Objects: Accessing Properties</h3>
+        <h3>Objects: Accessing Properties V4</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
