--- a/pages/11_functions.html
+++ b/pages/11_functions.html
@@ -78,7 +78,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Functions: Default Parameters</h3>
+        <h3>Functions: Default Parameters V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -96,7 +96,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Functions: Default Parameters</h3>
+        <h3>Functions: Default Parameters V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -114,7 +114,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Functions: Arrow Functions</h3>
+        <h3>Functions: Arrow Functions V1</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -132,7 +132,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Functions: Arrow Functions</h3>
+        <h3>Functions: Arrow Functions V2</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -150,7 +150,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Functions: Arrow Functions</h3>
+        <h3>Functions: Arrow Functions V3</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -168,7 +168,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Functions: Arrow Functions</h3>
+        <h3>Functions: Arrow Functions V4</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -186,7 +186,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Functions: Arrow Functions</h3>
+        <h3>Functions: Arrow Functions V5</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
